Added LD_LIBRARY_PATH for rainbow interface plus some scriping

--- a/cp3/ta/Dockerfile
+++ b/cp3/ta/Dockerfile
@@ -36,7 +36,11 @@ RUN sudo pip3 install catkin_pkg rospkg numpy psutil defusedxml flask-script
 
 COPY . /usr/src/app
 
+ADD start_exp.sh /usr/src/app
+
 RUN sudo chown -R mars /usr/src/app
+RUN chmod +x /usr/src/app/start_exp.sh
+
 
 ENV PYTHONUNBUFFERED 0
 
@@ -44,8 +48,11 @@ EXPOSE 8080
 
 ADD entrypoint.sh .
 
+
+
 ADD test-ready.json /home/mars/
+
 
 ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
 
-CMD ["python3", "-m", "swagger_server"]
+CMD ["/bin/bash"]
