--- a/cp1/ta/docker-compose-no-th.yml
+++ b/cp1/ta/docker-compose-no-th.yml
@@ -21,8 +21,11 @@ services:
       - "ROS_HOSTNAME=cp1_ta"
       - "ROS_MASTER_URI=http://cp1_ta:11311"
       - "TA_PORT=${TA_PORT}"
+      - "RAINBOW_WAIT_TIME=130"
     ports:
       - ${TA_PORT}:5000
+      - 1044:1044
     expose:
       - 5000
+      - 1044
     command: bash -c "rm -f /tmp/.X1-lock && . ~/.bashrc && . ~/catkin_ws/entrypoint.sh && cd /usr/src/app && python3 -m swagger_server /home/mars/test-ready-c.json"
