--- a/cp1/ta/Dockerfile
+++ b/cp1/ta/Dockerfile
@@ -40,6 +40,7 @@ RUN sudo pip3 install --no-cache-dir -r requirements.txt
 COPY . /usr/src/app
 RUN sudo chown -R mars /usr/src/app
 RUN python3 -m pip install --upgrade /usr/src/app
+ADD missions/* /home/mars/
 
 ENV PYTHONUNBUFFERED 0
 
