added cp1 folder and changed docker

--- a/cp1/ta/Dockerfile
+++ b/cp1/ta/Dockerfile
@@ -41,6 +41,9 @@ COPY . /usr/src/app
 RUN sudo chown -R mars /usr/src/app
 RUN python3 -m pip install --upgrade /usr/src/app
 ADD missions/* /home/mars/
+ADD cp1 /home/mars/cp1
+
+RUN sudo chown -R $(whoami):$(whoami) /home/mars/cp1
 
 ENV PYTHONUNBUFFERED 0
 
