--- a/rainbow-p2/Dockerfile-cp1
+++ b/rainbow-p2/Dockerfile-cp1
@@ -13,6 +13,12 @@ RUN sudo apt-get update && \
     sudo apt-get install -y openjdk-8-jre && \
     sudo /var/lib/dpkg/info/ca-certificates-java.postinst configure
 
+WORKDIR /home/mars/catkin_ws
+RUN rm -r src/ig-interpreter
+RUN git clone https://github.com/cmu-mars/ig-action-server-p15.git   src/ig-interpreter 
+RUN  . /opt/ros/kinetic/setup.sh && \
+    catkin_make
+
 WORKDIR /home/mars
 
 RUN mkdir das
