--- a/cp2/ta/Dockerfile
+++ b/cp2/ta/Dockerfile
@@ -14,37 +14,38 @@ RUN apk add --no-cache python3 git gcc gfortran python3-dev build-base openblas-
 
 RUN pip install --no-cache numpy==1.14.2
 
-# install BugZoo from source
-ENV BUGZOO_REVISION 58f73fd8328d9a0650b9f0185d398a298c9f2a55
-RUN git clone https://github.com/squaresLab/BugZoo /tmp/bugzoo --depth 30 \
- && cd /tmp/bugzoo \
- && git fetch origin "${BUGZOO_REVISION}" \
- && git checkout "${BUGZOO_REVISION}" \
- && pip install --no-cache . \
- && rm -rf /tmp/bugzoo
-
-# install boggart from source
-ENV BOGGART_REVISION a8820c79cdd21deb4200db74b4c1fd742f728a4b
-RUN git clone https://github.com/squaresLab/boggart /tmp/boggart \
- && cd /tmp/boggart \
- && git fetch origin "${BOGGART_REVISION}" \
- && git checkout "${BOGGART_REVISION}" \
- && pip install --no-cache . \
- && rm -rf /tmp/boggart
-
-# install Darjeeling from source
-ENV DARJEELING_REVISION 731423982bc030aaeaa4fa559e76be69cf7c31b3
-RUN git clone https://github.com/squaresLab/darjeeling /tmp/darjeeling \
- && cd /tmp/darjeeling \
- && git fetch origin "${DARJEELING_REVISION}" \
- && git checkout "${DARJEELING_REVISION}" \
- && pip install --no-cache . \
- && rm -rf /tmp/darjeeling
+## install BugZoo from source
+#ENV BUGZOO_REVISION 
+#RUN git clone https://github.com/squaresLab/BugZoo /tmp/bugzoo --depth 30 \
+# && cd /tmp/bugzoo \
+# && git fetch origin "${BUGZOO_REVISION}" \
+# && git checkout "${BUGZOO_REVISION}" \
+# && pip install --no-cache . \
+# && rm -rf /tmp/bugzoo
+#
+## install boggart from source
+#ENV BOGGART_REVISION a8820c79cdd21deb4200db74b4c1fd742f728a4b
+#RUN git clone https://github.com/squaresLab/boggart /tmp/boggart \
+# && cd /tmp/boggart \
+# && git fetch origin "${BOGGART_REVISION}" \
+# && git checkout "${BOGGART_REVISION}" \
+# && pip install --no-cache . \
+# && rm -rf /tmp/boggart
+#
+## install Darjeeling from source
+#ENV DARJEELING_REVISION 731423982bc030aaeaa4fa559e76be69cf7c31b3
+#RUN git clone https://github.com/squaresLab/darjeeling /tmp/darjeeling \
+# && cd /tmp/darjeeling \
+# && git fetch origin "${DARJEELING_REVISION}" \
+# && git checkout "${DARJEELING_REVISION}" \
+# && pip install --no-cache . \
+# && rm -rf /tmp/darjeeling
 
 # install Orchestrator from source
-ENV ORCHESTRATOR_REVISION 841137bd38961e7825fa1e9d5c03f005fbbaace3
+ENV ORCHESTRATOR_REVISION rr2-iw
 RUN git clone https://github.com/cmu-mars/p2c2-orchestrator /tmp/orchestrator \
  && cd /tmp/orchestrator \
+ && git fetch origin "${ORCHESTRATOR_REVISION}" \
  && git checkout "${ORCHESTRATOR_REVISION}" \
  && pip install --no-cache . \
  && rm -rf /tmp/orchestrator
