--- a/documents/swagger-yaml/cp3-th.yaml
+++ b/documents/swagger-yaml/cp3-th.yaml
@@ -220,7 +220,9 @@ paths:
               - final-charge
               - collisions
               - num-adaptations
-              - final-utility
+              - time-for-utility
+              - safety-for-utility
+              - charge-for-utility
             properties:
               final-x:
                 type: number
@@ -252,13 +254,25 @@ paths:
                 minimum: 0
                 description: >-
                   the number of times that the robot adapted (0 if there is no DAS)
-              final-utility:
+              time-for-utility:
+                type: number
+                format: float
+                minimum: 0.0
+                description: >-
+                  the time to use for the timeliness utility calculation
+              safety-for-utility:
+                type: number
+                format: float
+                minimum: 0.0
+                description: >-
+                  the number of times the robot collided in the mission
+              charge-for-utility:
                 type: number
                 format: float
                 minimum: 0.0
                 maximum: 1.0
                 description: >-
-                  the utility achieved at the end of the mission, in the range [0,1]
+                  the percentage of the battery left in the battery at mission completion /100
       responses:
         '200':
           description: >-
