updated orchestrator version

--- a/cp2/ta/Dockerfile
+++ b/cp2/ta/Dockerfile
@@ -42,7 +42,7 @@ RUN pip install --no-cache numpy==1.14.2
 # && rm -rf /tmp/darjeeling
 
 # install Orchestrator from source
-ENV ORCHESTRATOR_REVISION rr2-iw
+ENV ORCHESTRATOR_REVISION 058bb0f3fdbfe2cf44aa7d9cf8aed1216392733a
 RUN git clone https://github.com/cmu-mars/p2c2-orchestrator /tmp/orchestrator \
  && cd /tmp/orchestrator \
  && git fetch origin "${ORCHESTRATOR_REVISION}" \
