updating markdown and spec files per #160

--- a/documents/swagger-yaml/cp3-th.yaml
+++ b/documents/swagger-yaml/cp3-th.yaml
@@ -12,7 +12,7 @@ definitions:
       - robot-x
       - robot-y
       - robot-speed
-      - sime-time
+      - sim-time
     properties:
       robot-x:
         type: number
