changing CP1 TA /internal to /internal-status to match CP3 and rainbow

--- a/documents/swagger-yaml/cp1-internal.yaml
+++ b/documents/swagger-yaml/cp1-internal.yaml
@@ -6,7 +6,7 @@ schemes:
   - http
 host: brass-ta
 paths:
-  /internal:
+  /internal-status:
     post:
       description: >-
         reports any internal status (including the error that may
