Improved docker-compose setup for CP2 (#169)
* tweaked bugzoo service to use image provided by DockerHub

* tweaked LL compose to use bugzoo image provided by DockerHub

* fixed bugzoo image name for MIT LL TH

* removed commented-out build step from compose file

--- a/cp2/ta/docker-compose-mitll-harness.yml
+++ b/cp2/ta/docker-compose-mitll-harness.yml
@@ -14,8 +14,7 @@ services:
       --parameters '{"baselineFlag": "ActualTest", "testId": {"uuid": "fb9bbe71-c4ac-4405-a7e0-7f5d67785358"}, "cp": "CP2", "testGrpId": "3b76efbe-6588-4096-94a8-1d7ebfb51d5e", "params": {"numberOfFiles": 1, "cp2Init": {}, "numberOfPerturbations": 6}, tcId: 0}'
 
   bugzoo:
-    image: cmumars/bugzood
-    build: bugzoo
+    image: cmumars/bugzoo
     container_name: bugzoo
     hostname: bugzoo
     volumes:
