--- a/cp3/ta/docker-compose-mitll-harness.yml
+++ b/cp3/ta/docker-compose-mitll-harness.yml
@@ -34,6 +34,10 @@ services:
       - "ROS_MASTER_URI=http://cp3_ta:11311"
       - "ROS_HOSTNAME=cp3_ta"
       - "TA_PORT=${TA_PORT}"
+    volumes:
+      - ./start:/start
+      - ./logs:/home/mars/logs
+      - ./roslogs:/home/mars/.ros/log
     ports:
       - ${TA_PORT}:5000
     depends_on:
