bug fix: bad converter for patches

--- a/cp2/ta/docker-compose.yml
+++ b/cp2/ta/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '2'
 services:
   cp2_th:
-    # image: docker.darpa-brass.com/ll/cmur-harness
     image: cmumars/cp2mockth
     container_name: cp2_th
     hostname: cp2_th
@@ -10,7 +9,6 @@ services:
     expose:
       - 5001
     command: -p 5001 --url-ta http://cp2_ta:5000 --debug --log-file /var/log/th/cp2th.log
-    # command: --cp CP2 --thPort ${TH_PORT} --taHost cp2_ta --taPort 5000
 
   bugzoo:
     image: cmumars/bugzoo
@@ -20,6 +18,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp:/tmp
       - ./logs:/var/log/bugzoo
+      - ./coverage:/root/.bugzoo/coverage
     expose:
       - 6060
     command: -p 6060 --debug --log-file /var/log/bugzoo/bugzood.log
