--- a/cp2/ta/docker-compose.yml
+++ b/cp2/ta/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     command: -p 5001 --url-ta http://cp2_ta:5000 --debug --log-file /var/log/th/cp2th.log
 
   bugzoo:
-    image: cmumars/bugzoo
+    image: squareslab/bugzoo
     container_name: bugzoo
     hostname: bugzoo
     volumes:
@@ -33,7 +33,7 @@ services:
       - ./logs:/var/log/rooibosd
     expose:
       - 8888
-    command: -p 8888
+    entrypoint: /bin/bash -c "rooibosd -p 8888 >& /dev/null"
 
   boggart:
     image: squareslab/boggart
@@ -60,4 +60,10 @@ services:
       - ./logs:/var/log/ta
     expose:
       - 5000
-    command: python3 -u -m swagger_server http://cp2_th:5001 http://boggart:6000 http://bugzoo:6060
+    command: |
+      python3 -u -m swagger_server
+        --th-url http://cp2_th:5001
+        --boggart-url http://boggart:6000
+        --bugzoo-url http://bugzoo:6060
+        --rooibos-url http://rooibos:8888
+        --threads 12
