--- a/cp1/ta/docker-compose-no-th.yml
+++ b/cp1/ta/docker-compose-no-th.yml
@@ -22,6 +22,9 @@ services:
       - "ROS_MASTER_URI=http://cp1_ta:11311"
       - "TA_PORT=${TA_PORT}"
       - "RAINBOW_WAIT_TIME=130"
+    volumes:
+      - ./logs:/home/mars/logs
+      - ./roslogs:/home/mars/.ros/log
     ports:
       - ${TA_PORT}:5000
       - 1044:1044
