--- a/cp1/ta/docker-compose-no-th.yml
+++ b/cp1/ta/docker-compose-no-th.yml
@@ -25,6 +25,7 @@ services:
     volumes:
       - ./logs:/home/mars/logs
       - ./roslogs:/home/mars/.ros/log
+      - ./cp1logs:/home/mars/cp1
     ports:
       - ${TA_PORT}:5000
       - 1044:1044
