--- a/cp1/ta/docker-compose-mitll-harness.yml
+++ b/cp1/ta/docker-compose-mitll-harness.yml
@@ -39,9 +39,10 @@ services:
       - "RAINBOW_WAIT_TIME=130"
       - "TH_HOST=${TH_HOST}"
       - "TH_PORT=${TH_PORT}"
-#    volumes:
-#      - ./logs:/home/mars/logs
-#      - ./roslogs:/home/mars/.ros/log
+    volumes:
+      - ./logs:/home/mars/logs
+      - ./roslogs:/home/mars/.ros/log
+      - ./cp1logs:/home/mars/cp1
     ports:
       - ${TA_PORT}:5000
       - 1044:1044
