--- a/cp1/ta/docker-compose-mitll-harness.yml
+++ b/cp1/ta/docker-compose-mitll-harness.yml
@@ -42,7 +42,7 @@ services:
     volumes:
       - ./logs:/home/mars/logs
       - ./roslogs:/home/mars/.ros/log
-      - ./cp1logs:/home/mars/cp1
+      - ./cp1:/home/mars/cp1
     ports:
       - ${TA_PORT}:5000
       - 1044:1044
