--- a/cp1/ta/docker-compose-no-th.yml
+++ b/cp1/ta/docker-compose-no-th.yml
@@ -25,11 +25,11 @@ services:
     volumes:
       - ./logs:/home/mars/logs
       - ./roslogs:/home/mars/.ros/log
-      - ./cp1logs:/home/mars/cp1
+      - ./cp1:/home/mars/cp1
     ports:
       - ${TA_PORT}:5000
       - 1044:1044
     expose:
       - 5000
       - 1044
-    command: bash -c "rm -f /tmp/.X1-lock && . ~/.bashrc && . ~/catkin_ws/entrypoint.sh && cd /usr/src/app && python3 -m swagger_server /home/mars/test-ready-c1d.json"
+    command: bash -c "rm -f /tmp/.X1-lock && . ~/.bashrc && . ~/catkin_ws/entrypoint.sh && cd /usr/src/app && python3 -m swagger_server /home/mars/test-ready-c1c.json"
