--- a/cp2/ta/docker-compose-mitll-harness.yml
+++ b/cp2/ta/docker-compose-mitll-harness.yml
@@ -7,11 +7,16 @@ services:
     expose:
       - 5001
     entrypoint: /home/haskell/cmur
-    command: >
-      --thPort 5001
-      --shellApi http://nevermind:8080
-      --taApi http://cp2_ta:5000/
-      --parameters '{"baselineFlag": "ActualTest", "testId": {"uuid": "fb9bbe71-c4ac-4405-a7e0-7f5d67785358"}, "cp": "CP2", "testGrpId": "3b76efbe-6588-4096-94a8-1d7ebfb51d5e", "params": {"numberOfFiles": 1, "cp2Init": {}, "numberOfPerturbations": 6}, tcId: 0}'
+    command: [
+      "--sutTimeout", "1500",
+      "--dbHost", "queue.darpa-brass.com",
+      "--dbPort", "5432",
+      "--thPort", "5001",
+      "--parameters",
+      '{"baselineFlag": "ActualTest", "testId": {"uuid": "fb9bbe71-c4ac-4405-a7e0-7f5d67785358"}, "cp": "CP2", "testGrpId": "3b76efbe-6588-4096-94a8-1d7ebfb51d5e", "params": {"cp2Init": {}, "pertKind": "flip-arithmetic-operator"}, tcId: 0}',
+      "--shellApi", "http://queue.darpa-brass.com:8080",
+      "--taApi", "http://localhost:5000/"
+    ]
 
   bugzoo:
     image: cmumars/bugzoo
