--- a/cp3/ta/requirements.txt
+++ b/cp3/ta/requirements.txt
@@ -1,6 +1,13 @@
 connexion == 1.1.9
 python_dateutil == 2.6.0
 setuptools >= 21.0.0
- certifi >= 14.05.14
+certifi >= 14.05.14
 six >= 1.10
 urllib3 >= 1.15.1
+
+netifaces
+sklearn
+scipy
+pyDOE
+sympy
+psutil>=5.4.6
