--- a/rainbow-p2/Dockerfile-cp3
+++ b/rainbow-p2/Dockerfile-cp3
@@ -4,7 +4,9 @@ FROM cmu-mars/cp3_base
     
 # Install Java
 # ## per https://bugs.launchpad.net/ubuntu/+source/ca-certificates-java/+bug/1396760
-RUN sudo apt-get install -y software-properties-common
+
+RUN sudo apt-get update &&\
+    sudo apt-get install -y software-properties-common
 
 #RUN sudo apt-add-repository ppa:openjdk-r/ppa && \
 #    sudo apt-get update && \
@@ -43,6 +45,9 @@ RUN wget http://acme.able.cs.cmu.edu/public/BRASS/p2/rainbow-brass-P2-release.tg
 RUN sudo chown -R mars /home/mars/das
 
 RUN find . -name ".sh" -exec chmod +x {} \;
+WORKDIR /home/mars/catkin_ws/src/ig-interpreter
+RUN git pull origin master
+#RUN git clone https://github.com/cmu-mars/ig-action-server-p15.git   src/ig-interpreter 
 
 # This is where the backup plan for setting the instruction graphs puts
 # the new instruction graphs
